# The-Evolution-of-Todo

./: .gitignore  CLAUDE.md  SPEC_OVERVIEW.md
.claude/agents/: backend-development.md  frontend-developer.md  frontend-ui-designer.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md
Phase-2-web-todo/backend/: .env.example  .gitignore  README.md  pyproject.toml
Phase-2-web-todo/backend/src/: config.py  db.py  main.py
Phase-2-web-todo/backend/src/api/: deps.py  tasks.py
Phase-2-web-todo/backend/src/models/: task.py
Phase-2-web-todo/backend/src/services/: task_service.py
Phase-2-web-todo/backend/tests/: test_tasks.py
Phase-2-web-todo/frontend/: README.md  package-lock.json  package.json  postcss.config.mjs  tsconfig.json
Phase-2-web-todo/scripts/: api-communication-test.js  complete-e2e-test.js  validate-config.js
Phase-2-web-todo/specs/: phase-2.md
Phase-3-todo-ai-chatbot/: README.md
Phase-3-todo-ai-chatbot/backend/: .env.example  .gitignore  README.md  pyproject.toml
Phase-3-todo-ai-chatbot/frontend/: .env.example  .gitignore  BETTER_AUTH_DB_SETUP.md  package-lock.json  package.json
Phase-3-todo-ai-chatbot/scripts/: jwt-compatibility-test.js
Phase-3-todo-ai-chatbot/specs/: phase-3.md
Phase-4-Local-Kubernetes-Deployment/backend/: .dockerignore  Dockerfile  pyproject.toml
python-console-todo-app/: .gitignore  README.md  pyproject.toml
python-console-todo-app/specs/: phase-1.md
python-console-todo-app/src/: main.py  task.py  ui.py
python-console-todo-app/tests/: test_task.py
(+184 files in other folders)
